webssh: file-explorer: fix directory-view overflow height

--- a/public/css/file-explorer.css
+++ b/public/css/file-explorer.css
@@ -10,7 +10,7 @@
 
 #directory-view {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 32px - 42px);
 
     display: flex;
     align-items: flex-start;
